22 Oct 2006 coudercd
 * added support for shared library versioning.
 * library version numbers become optional.

14 Oct 2006 coudercd
 * lib checking fix was incomplete, it should be now (noticed by Phil
   aka wintellect).
 * fixed -u option of pmksetup and added a reminder in man page to
   escape double quotes.

11 Oct 2006 coudercd
 * fixed label generation for objects.
 * reimplemented instal targets for data files and man pages.
 * updated pmkcfg.sh to sync with latest changes.
 * updated scanfile to avoid unwanted template modification.
 * updated Makefile.pmk with pmkscan generated template.

10 Oct 2006 coudercd
 * reimplemented binary targets in makefile template generated by
   pmkscan to follow the same behavior as for libraries.

09 Oct 2006 coudercd
 * recovered shared library support from my broken laptop which died 2
   seconds after the stuff was completed.
 * added missing file lang.c in the previous commit.

07 Oct 2006 coudercd
 * lib checking was broken in a previous commit, it is now fixed.

06 Oct 2006 coudercd
 * fixed coredumps in pmk_check_config() and pmk_check_pkg_config() due
   to missing initialization of the codebuild structure.

28 Sep 2006 coudercd
 * better management of the template files, now pmkscan can process
   them in only one pass.

24 Sep 2006 coudercd
 * started simplification and automatization of makefile template's targets.

23 Sep 2006 coudercd
 * removed obsolete command line options of pmkscan.
 * updated pmkscan and scanfile man pages.

22 Sep 2006 coudercd
 * import large chunk of code for better support of shared library.
 * fixed format of c++ suffix in generated makefile.

14 Sep 2006 coudercd
 * fixed CPUID checking for X86 32 bits CPUs, noticed by Leslie Polzer.

05 Sep 2006 coudercd
 * updated values for compiler detection in SETTINGS to sync with pmk.

# snapshot 20060902

01 Sep 2006 coudercd
 * fixed a regression in rev. 102 that prevented from generating a