@@ -118,92 +118,112 @@ ADD_COMPILER {
 
 ADD_SYSTEM {
 	NAME = "Darwin"
-	SL_EXT = ".dylib"
-	SL_VERSION = "$SL_MAJOR.$SL_MINOR"
-	SL_LIBNAME = "lib$SL_NAME$SL_EXT"
-	SL_LIBNAME_VMAJ = "lib$SL_NAME.$SL_MAJOR$SL_EXT"
-	SL_LIBNAME_VFULL = "lib$SL_NAME.$SL_VERSION$SL_EXT"
+	LIB_VERSION = "$LIB_MAJOR.$LIB_MINOR"
+	ST_EXT = ".a"
+	ST_LIBNAME_NONE = "lib$LIB_NAME$ST_EXT"
+	ST_LIBNAME_VERS = "lib$LIB_NAME-$LIB_VERSION$ST_EXT"
+	SH_EXT = ".dylib"
+	SH_LIBNAME_NONE = "lib$LIB_NAME$SH_EXT"
+	SH_LIBNAME_VERS = "lib$LIB_NAME.$LIB_VERSION$SH_EXT"
 	SLLDFLAGS_gcc = "-dynamiclib"
 }
 
 ADD_SYSTEM {
 	NAME = "FreeBSD"
-	SL_EXT = ".so"
-	SL_VERSION = "$SL_MAJOR.$SL_MINOR"
-	SL_LIBNAME = "lib$SL_NAME$SL_EXT"
-	SL_LIBNAME_VMAJ = "$SL_LIBNAME.$SL_MAJOR"
-	SL_LIBNAME_VFULL = "$SL_LIBNAME.$SL_VERSION"
+	LIB_VERSION = "$LIB_MAJOR"
+	ST_EXT = ".a"
+	ST_LIBNAME_NONE = "lib$LIB_NAME$ST_EXT"
+	ST_LIBNAME_VERS = "lib$LIB_NAME-$LIB_VERSION$ST_EXT"
+	SH_EXT = ".so"
+	SH_LIBNAME_NONE = "lib$LIB_NAME$SH_EXT"
+	SH_LIBNAME_VERS = "lib$LIB_NAME$SH_EXT.$LIB_VERSION"
 }
 
 ADD_SYSTEM {
 	NAME = "DragonFly"
-	SL_EXT = ".so"
-	SL_VERSION = "$SL_MAJOR.$SL_MINOR"
-	SL_LIBNAME = "lib$SL_NAME$SL_EXT"
-	SL_LIBNAME_VMAJ = "$SL_LIBNAME.$SL_MAJOR"
-	SL_LIBNAME_VFULL = "$SL_LIBNAME.$SL_VERSION"
+	LIB_VERSION = "$LIB_MAJOR.$LIB_MINOR"
+	ST_EXT = ".a"
+	ST_LIBNAME_NONE = "lib$LIB_NAME$ST_EXT"
+	ST_LIBNAME_VERS = "lib$LIB_NAME-$LIB_VERSION$ST_EXT"
+	SH_EXT = ".so"
+	SH_LIBNAME_NONE = "lib$LIB_NAME$SH_EXT"
+	SH_LIBNAME_VERS = "lib$LIB_NAME$SH_EXT.$LIB_VERSION"
 }
 
 ADD_SYSTEM {
 	NAME = "HP-UX"
-	SL_EXT = ".sl"
-	SL_VERSION = "$SL_MAJOR.$SL_MINOR"
-	SL_LIBNAME = "lib$SL_NAME$SL_EXT"
-	SL_LIBNAME_VMAJ = "$SL_LIBNAME.$SL_MAJOR"
-	SL_LIBNAME_VFULL = "$SL_LIBNAME.$SL_VERSION"
+	LIB_VERSION = "$LIB_MAJOR.$LIB_MINOR"
+	ST_EXT = ".a"
+	ST_LIBNAME_NONE = "lib$LIB_NAME$ST_EXT"
+	ST_LIBNAME_VERS = "lib$LIB_NAME-$LIB_VERSION$ST_EXT"
+	SH_EXT = ".sl"
+	SH_LIBNAME_NONE = "lib$LIB_NAME$SH_EXT"
+	SH_LIBNAME_VERS = "lib$LIB_NAME$SH_EXT.$LIB_VERSION"
 }
 
 ADD_SYSTEM {
 	NAME = "IRIX"
-	SL_EXT = ".so"
-	SL_VERSION = "$SL_MAJOR.$SL_MINOR"
-	SL_LIBNAME = "lib$SL_NAME$SL_EXT"
-	SL_LIBNAME_VMAJ = "$SL_LIBNAME.$SL_MAJOR"
-	SL_LIBNAME_VFULL = "$SL_LIBNAME.$SL_VERSION"
+	LIB_VERSION = "$LIB_MAJOR.$LIB_MINOR"
+	ST_EXT = ".a"
+	ST_LIBNAME_NONE = "lib$LIB_NAME$ST_EXT"
+	ST_LIBNAME_VERS = "lib$LIB_NAME-$LIB_VERSION$ST_EXT"
+	SH_EXT = ".so"
+	SH_LIBNAME_NONE = "lib$LIB_NAME$SH_EXT"
+	SH_LIBNAME_VERS = "lib$LIB_NAME$SH_EXT.$LIB_VERSION"
 }
 
 ADD_SYSTEM {
 	NAME = "Linux"
-	SL_EXT = ".so"
-	SL_VERSION = "$SL_MAJOR.$SL_MINOR"
-	SL_LIBNAME = "lib$SL_NAME$SL_EXT"
-	SL_LIBNAME_VMAJ = "$SL_LIBNAME.$SL_MAJOR"
-	SL_LIBNAME_VFULL = "$SL_LIBNAME.$SL_VERSION"
+	LIB_VERSION = "$LIB_MAJOR.$LIB_MINOR"
+	ST_EXT = ".a"
+	ST_LIBNAME_NONE = "lib$LIB_NAME$ST_EXT"
+	ST_LIBNAME_VERS = "lib$LIB_NAME-$LIB_VERSION$ST_EXT"
+	SH_EXT = ".so"
+	SH_LIBNAME_NONE = "lib$LIB_NAME$SH_EXT"
+	SH_LIBNAME_VERS = "lib$LIB_NAME$SH_EXT.$LIB_VERSION"
 }
 
 ADD_SYSTEM {
 	NAME = "NetBSD"
-	SL_EXT = ".so"
-	SL_VERSION = "$SL_MAJOR.$SL_MINOR"
-	SL_LIBNAME = "lib$SL_NAME$SL_EXT"
-	SL_LIBNAME_VMAJ = "$SL_LIBNAME.$SL_MAJOR"
-	SL_LIBNAME_VFULL = "$SL_LIBNAME.$SL_VERSION"
+	LIB_VERSION = "$LIB_MAJOR.$LIB_MINOR"
+	ST_EXT = ".a"
+	ST_LIBNAME_NONE = "lib$LIB_NAME$ST_EXT"
+	ST_LIBNAME_VERS = "lib$LIB_NAME-$LIB_VERSION$ST_EXT"
+	SH_EXT = ".so"
+	SH_LIBNAME_NONE = "lib$LIB_NAME$SH_EXT"
+	SH_LIBNAME_VERS = "lib$LIB_NAME$SH_EXT.$LIB_VERSION"
 }
 
 ADD_SYSTEM {
 	NAME = "OpenBSD"
-	SL_EXT = ".so"
-	SL_VERSION = "$SL_MAJOR.$SL_MINOR"
-	SL_LIBNAME = "lib$SL_NAME$SL_EXT"
-	SL_LIBNAME_VMAJ = "$SL_LIBNAME.$SL_MAJOR"
-	SL_LIBNAME_VFULL = "$SL_LIBNAME.$SL_VERSION"
+	LIB_VERSION = "$LIB_MAJOR.$LIB_MINOR"
+	ST_EXT = ".a"
+	ST_LIBNAME_NONE = "lib$LIB_NAME$ST_EXT"
+	ST_LIBNAME_VERS = "lib$LIB_NAME-$LIB_VERSION$ST_EXT"
+	SH_EXT = ".so"
+	SH_LIBNAME_NONE = "lib$LIB_NAME$SH_EXT"
+	SH_LIBNAME_VERS = "lib$LIB_NAME$SH_EXT.$LIB_VERSION"
 }
 
 ADD_SYSTEM {
 	NAME = "OSF1"
-	SL_EXT = ".so"
-	SL_VERSION = "$SL_MAJOR.$SL_MINOR"
-	SL_LIBNAME = "lib$SL_NAME$SL_EXT"
-	SL_LIBNAME_VMAJ = "$SL_LIBNAME.$SL_MAJOR"
-	SL_LIBNAME_VFULL = "$SL_LIBNAME.$SL_VERSION"
+	LIB_VERSION = "$LIB_MAJOR.$LIB_MINOR"
+	ST_EXT = ".a"
+	ST_LIBNAME_NONE = "lib$LIB_NAME$ST_EXT"
+	ST_LIBNAME_VERS = "lib$LIB_NAME-$LIB_VERSION$ST_EXT"
+	SH_EXT = ".so"
+	SH_LIBNAME_NONE = "lib$LIB_NAME$SH_EXT"
+	SH_LIBNAME_VERS = "lib$LIB_NAME$SH_EXT.$LIB_VERSION"
 }
 
 ADD_SYSTEM {
 	NAME = "SunOS"
-	SL_EXT = ".so"
-	SL_VERSION = "$SL_MAJOR.$SL_MINOR"
-	SL_LIBNAME = "lib$SL_NAME$SL_EXT"
-	SL_LIBNAME_VMAJ = "$SL_LIBNAME.$SL_MAJOR"
-	SL_LIBNAME_VFULL = "$SL_LIBNAME.$SL_VERSION"
+	LIB_VERSION = "$LIB_MAJOR.$LIB_MINOR"
+	ST_EXT = ".a"
+	ST_LIBNAME_NONE = "lib$LIB_NAME$ST_EXT"
+	ST_LIBNAME_VERS = "lib$LIB_NAME-$LIB_VERSION$ST_EXT"
+	SH_EXT = ".so"
+	SH_LIBNAME_NONE = "lib$LIB_NAME$SH_EXT"
+	SH_LIBNAME_VERS = "lib$LIB_NAME$SH_EXT.$LIB_VERSION"
 }
 
