@@ -75,11 +75,13 @@ kwopt_t	kw_addcomp = {
  */
 kw_t	req_addsys[] = {
 	{SYS_KW_NAME,		PO_STRING},
-	{SYS_KW_EXT,		PO_STRING},
-	{SYS_KW_VERSION,	PO_STRING},
-	{SYS_KW_FMT,		PO_STRING},
-	{SYS_KW_FMT_MAJ,	PO_STRING},
-	{SYS_KW_FMT_FULL,	PO_STRING}
+	{SYS_KW_SH_EXT,		PO_STRING},
+	{SYS_KW_SH_NONE,	PO_STRING},
+	{SYS_KW_SH_VERS,	PO_STRING},
+	{SYS_KW_ST_EXT,		PO_STRING},
+	{SYS_KW_ST_NONE,	PO_STRING},
+	{SYS_KW_ST_VERS,	PO_STRING},
+	{SYS_KW_VERSION,	PO_STRING}
 };
 
 kwopt_t	kw_addsys = {
